{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 3627,
  "lineage": "e6f945ee-93ff-845f-486e-29bed343e42d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9349e61170a89e0",
            "arn": "arn:aws:ec2:us-east-1:440744220049:elastic-ip/eipalloc-0e9349e61170a89e0",
            "association_id": "eipassoc-095186d3202ea7c17",
            "domain": "vpc",
            "id": "eipalloc-0e9349e61170a89e0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ea424b72aa7bbbfe",
            "private_dns": "ip-10-0-1-142.ec2.internal",
            "private_ip": "10.0.1.142",
            "public_dns": "ec2-3-226-207-209.compute-1.amazonaws.com",
            "public_ip": "3.226.207.209",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:internet-gateway/igw-0a73db9bd9e0489db",
            "id": "igw-0a73db9bd9e0489db",
            "owner_id": "440744220049",
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "vpc_id": "vpc-06e6b26fa86f1fe9c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:440744220049:loadbalancer/app/app-external-lb/010670c6b6c496ce",
            "arn_suffix": "app/app-external-lb/010670c6b6c496ce",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-external-lb-1746473577.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:440744220049:loadbalancer/app/app-external-lb/010670c6b6c496ce",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-external-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05444f0a9db3a9bdf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07c6060ecea42f74a"
              },
              {
                "subnet_id": "subnet-0ff7741feade24c89"
              }
            ],
            "subnets": [
              "subnet-07c6060ecea42f74a",
              "subnet-0ff7741feade24c89"
            ],
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "app-external-lb"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "app-external-lb"
            },
            "vpc_id": "vpc-06e6b26fa86f1fe9c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_external",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:440744220049:loadbalancer/app/app-internal-lb/cc4fd17473ba268f",
            "arn_suffix": "app/app-internal-lb/cc4fd17473ba268f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-app-internal-lb-759839134.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:440744220049:loadbalancer/app/app-internal-lb/cc4fd17473ba268f",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-internal-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-020f5c65c13fbf002"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05d9cad690e736f43"
              },
              {
                "subnet_id": "subnet-07461d4ff99ce0fbd"
              }
            ],
            "subnets": [
              "subnet-05d9cad690e736f43",
              "subnet-07461d4ff99ce0fbd"
            ],
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "vpc_id": "vpc-06e6b26fa86f1fe9c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_internal",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:440744220049:listener/app/app-external-lb/010670c6b6c496ce/4084429c10fa4ebf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "OK",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:440744220049:listener/app/app-external-lb/010670c6b6c496ce/4084429c10fa4ebf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:440744220049:loadbalancer/app/app-external-lb/010670c6b6c496ce",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "external-http-listener"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "external-http-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.external_lb",
            "aws_security_group.alb_external",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:440744220049:listener/app/app-external-lb/010670c6b6c496ce/24a401249dae886f",
            "certificate_arn": "arn:aws:acm:us-east-1:440744220049:certificate/6a2cb772-071f-4e9a-9b81-766de468f24c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "OK",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:440744220049:listener/app/app-external-lb/010670c6b6c496ce/24a401249dae886f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:440744220049:loadbalancer/app/app-external-lb/010670c6b6c496ce",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "external-https-listener"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "external-https-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.external_lb",
            "aws_security_group.alb_external",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:440744220049:listener/app/app-internal-lb/cc4fd17473ba268f/66643335686b35f2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "OK",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:440744220049:listener/app/app-internal-lb/cc4fd17473ba268f/66643335686b35f2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:440744220049:loadbalancer/app/app-internal-lb/cc4fd17473ba268f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "internal-http-listener"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "internal-http-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.internal_lb",
            "aws_security_group.alb_internal",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "external_tg_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:440744220049:targetgroup/external-tg-https/75ac18e4e6031ea4",
            "arn_suffix": "targetgroup/external-tg-https/75ac18e4e6031ea4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 20,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:440744220049:targetgroup/external-tg-https/75ac18e4e6031ea4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "external-tg-https",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "external-tg-https"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "external-tg-https"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06e6b26fa86f1fe9c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internal_tg_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:440744220049:targetgroup/internal-tg-https/b54074f1d91825f4",
            "arn_suffix": "targetgroup/internal-tg-https/b54074f1d91825f4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:440744220049:targetgroup/internal-tg-https/b54074f1d91825f4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:440744220049:loadbalancer/app/app-internal-lb/cc4fd17473ba268f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "internal-tg-https",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "internal-tg-https"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "internal-tg-https"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06e6b26fa86f1fe9c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "private_as_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a33dfd88d63e5d2",
            "original_route_table_id": "rtb-0e8e4a09c485c1656",
            "route_table_id": "rtb-03e101ff39613c7d8",
            "vpc_id": "vpc-06e6b26fa86f1fe9c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9349e61170a89e0",
            "association_id": "eipassoc-095186d3202ea7c17",
            "connectivity_type": "public",
            "id": "nat-048c09155dc9660d4",
            "network_interface_id": "eni-0ea424b72aa7bbbfe",
            "private_ip": "10.0.1.142",
            "public_ip": "3.226.207.209",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ff7741feade24c89",
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_peering_backup_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03e101ff39613c7d8972025212",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e101ff39613c7d8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0cf96db3f58a294a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public_a",
            "aws_vpc.backup",
            "aws_vpc.main",
            "aws_vpc_peering_connection.vpc_peering_backup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_peering_main_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03e101ff39613c7d8972025212",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e101ff39613c7d8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0cf96db3f58a294a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public_a",
            "aws_vpc.backup",
            "aws_vpc.main",
            "aws_vpc_peering_connection.vpc_peering_backup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:route-table/rtb-03e101ff39613c7d8",
            "id": "rtb-03e101ff39613c7d8",
            "owner_id": "440744220049",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": "nat-048c09155dc9660d4",
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "private-route-table"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e6b26fa86f1fe9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:route-table/rtb-02bdc1dae63c6dddf",
            "id": "rtb-02bdc1dae63c6dddf",
            "owner_id": "440744220049",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a73db9bd9e0489db",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "public-route-table"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e6b26fa86f1fe9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f194eddcff99dadc",
            "route_table_id": "rtb-03e101ff39613c7d8",
            "subnet_id": "subnet-07461d4ff99ce0fbd"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5046fb91749dc93",
            "route_table_id": "rtb-03e101ff39613c7d8",
            "subnet_id": "subnet-05d9cad690e736f43"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b5164ff51b0ba46",
            "route_table_id": "rtb-02bdc1dae63c6dddf",
            "subnet_id": "subnet-0ff7741feade24c89"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e90808929a39c53",
            "route_table_id": "rtb-02bdc1dae63c6dddf",
            "subnet_id": "subnet-07c6060ecea42f74a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:security-group/sg-05444f0a9db3a9bdf",
            "description": "Security group for external ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05444f0a9db3a9bdf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-external-sg",
            "name_prefix": "",
            "owner_id": "440744220049",
            "revoke_rules_on_delete": false,
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "alb-external-sg"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "alb-external-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e6b26fa86f1fe9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:security-group/sg-020f5c65c13fbf002",
            "description": "Security group for internal ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020f5c65c13fbf002",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-internal-sg",
            "name_prefix": "",
            "owner_id": "440744220049",
            "revoke_rules_on_delete": false,
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "alb-internal-sg"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "alb-internal-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e6b26fa86f1fe9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backup_vpc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:security-group/sg-0ed1e84b68eeefdea",
            "description": "Security group for Backup VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed1e84b68eeefdea",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "backup-vpc-sg",
            "name_prefix": "",
            "owner_id": "440744220049",
            "revoke_rules_on_delete": false,
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "timeouts": null,
            "vpc_id": "vpc-09934b9b0ee992396"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.backup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:security-group/sg-05ab9ffeb2f472f75",
            "description": "Security group for RDS database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ab9ffeb2f472f75",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-091d6a708e2c5b468"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-security-group",
            "name_prefix": "",
            "owner_id": "440744220049",
            "revoke_rules_on_delete": false,
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e6b26fa86f1fe9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_external",
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_vpc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:security-group/sg-02bb235bfd06b2154",
            "description": "Security group for main VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bb235bfd06b2154",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "main-vpc-sg",
            "name_prefix": "",
            "owner_id": "440744220049",
            "revoke_rules_on_delete": false,
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e6b26fa86f1fe9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:security-group/sg-091d6a708e2c5b468",
            "description": "Security group for joomla instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091d6a708e2c5b468",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05444f0a9db3a9bdf"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "440744220049",
            "revoke_rules_on_delete": false,
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e6b26fa86f1fe9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_external",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backup_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:subnet/subnet-037fb693c46dc80b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037fb693c46dc80b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440744220049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Dev": "Alejandro",
              "Env": "Backup",
              "Name": "backup-private-a"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Backup",
              "Name": "backup-private-a"
            },
            "vpc_id": "vpc-09934b9b0ee992396"
          },
          "dependencies": [
            "aws_vpc.backup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backup_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:subnet/subnet-0a8d01c7ac5744c58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8d01c7ac5744c58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440744220049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Dev": "Alejandro",
              "Env": "Backup",
              "Name": "backup-private-b"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Backup",
              "Name": "backup-private-b"
            },
            "vpc_id": "vpc-09934b9b0ee992396"
          },
          "dependencies": [
            "aws_vpc.backup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backup_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:subnet/subnet-035c56d3d5f4db25c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035c56d3d5f4db25c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440744220049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Dev": "Alejandro",
              "Env": "Backup",
              "Name": "backup-public-a"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Backup",
              "Name": "backup-public-a"
            },
            "vpc_id": "vpc-09934b9b0ee992396"
          },
          "dependencies": [
            "aws_vpc.backup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backup_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:subnet/subnet-0b577acae7a6994c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b577acae7a6994c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440744220049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Dev": "Alejandro",
              "Env": "Backup",
              "Name": "backup-public-b"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Backup",
              "Name": "backup-public-b"
            },
            "vpc_id": "vpc-09934b9b0ee992396"
          },
          "dependencies": [
            "aws_vpc.backup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:subnet/subnet-07461d4ff99ce0fbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07461d4ff99ce0fbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440744220049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "vpc_id": "vpc-06e6b26fa86f1fe9c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:subnet/subnet-05d9cad690e736f43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d9cad690e736f43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440744220049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "vpc_id": "vpc-06e6b26fa86f1fe9c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:subnet/subnet-0ff7741feade24c89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff7741feade24c89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440744220049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "vpc_id": "vpc-06e6b26fa86f1fe9c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:subnet/subnet-07c6060ecea42f74a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c6060ecea42f74a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440744220049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "vpc_id": "vpc-06e6b26fa86f1fe9c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "backup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:vpc/vpc-09934b9b0ee992396",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e447cfcfc44eae2d",
            "default_route_table_id": "rtb-06e821e635461d1b2",
            "default_security_group_id": "sg-09170117a104f2e4a",
            "dhcp_options_id": "dopt-002234510615d01f5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09934b9b0ee992396",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06e821e635461d1b2",
            "owner_id": "440744220049",
            "tags": {
              "Dev": "Alejandro",
              "Env": "Backup",
              "Name": "vpc-backup"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Backup",
              "Name": "vpc-backup"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744220049:vpc/vpc-06e6b26fa86f1fe9c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e31f0d0c74c48eea",
            "default_route_table_id": "rtb-03e101ff39613c7d8",
            "default_security_group_id": "sg-09b2835521b1bd23c",
            "dhcp_options_id": "dopt-002234510615d01f5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e6b26fa86f1fe9c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e101ff39613c7d8",
            "owner_id": "440744220049",
            "tags": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Lab4",
              "Name": "vpc-lab4"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peering_backup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0cf96db3f58a294a1",
            "peer_owner_id": "440744220049",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-09934b9b0ee992396",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Dev": "Alejandro",
              "Env": "Backup",
              "Name": "vpc-peering-connection-backup"
            },
            "tags_all": {
              "Dev": "Alejandro",
              "Env": "Backup",
              "Name": "vpc-peering-connection-backup"
            },
            "vpc_id": "vpc-06e6b26fa86f1fe9c"
          },
          "dependencies": [
            "aws_vpc.backup",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}